@@ -3,6 +3,7 @@
 	  a specified attribute is defined as single-value in the LDAP schema
 	* smbldap-useradd, smbldap-usermod: Check if mailRoutingAddress
 	  is single-value or not
+	* smbldap-usermod: Remove mailRoutingAddress if empty
 
 2012-10-19 <fumiyas at OSS Technology Corp., Japan>
 	* smbldap_tools.pm: read_user_human_readable: Protect attribute
